Fix 7TV settings menu z-index (#79)
* Removed root z-index

* Increased root z-index

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,5 +1,5 @@
 #seventv-root {
-	z-index: 1;
+	z-index: 9999;
 }
 
 .tw-root--theme-dark {
